Refreshed swagger gen'd code Minor changes
